[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unichat"
version = "4.3.2"
authors = [
    { name = "Stefan", email = "versed_info0w@icloud.com" },
]
description = "Universal API chat Python client for OpenAI, MistralAI, Anthropic, xAI, Google AI, or any OpenAI SDK LLM provider."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic<1",
    "mistralai<=1.12.4",
    "openai>=2,<3",
]

[project.urls]
Repository = "https://github.com/amidabuddha/unichat"